# nvim-ros2

./: .gitignore  LICENSE  README.md
lua/nvim-ros2/: config.lua  init.lua  stylua.toml
lua/nvim-ros2/pickers/: fzf.lua  init.lua  snacks.lua  telescope.lua
lua/nvim-ros2/telescope/: pickers.lua  previewers.lua
lua/telescope/_extensions/: ros2.lua
queries/ros2/: highlights.scm
treesitter-ros2/: Cargo.toml  arrays-file  binding.gyp  grammar.js  log.html  package-lock.json  package.json  validate_interfaces.sh
treesitter-ros2/bindings/node/: binding.cc  index.js
treesitter-ros2/bindings/rust/: lib.rs
treesitter-ros2/corpus/: action.txt  msg.txt  srv.txt
treesitter-ros2/examples/: example.action  example.msg  example.sdfs  example.srv
treesitter-ros2/src/: grammar.json  node-types.json  parser.c
