[package]
name = "tree-sitter-ros2"
description = "ros2 grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "ros2"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ErickKramer/ros2.nvim"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.21.0"

[build-dependencies]
cc = "1.0"
